
[TestGenerateResourceQuotaManifests_CustomAndMultiNamespace - 1]
apiVersion: v1
kind: ResourceQuota
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: team-beta-quota
  namespace: ns-a
spec:
  hard:
    limits.cpu: "8"
    limits.memory: 16Gi
    requests.cpu: "8"
    requests.memory: 16Gi
/-/-/-/
apiVersion: v1
kind: ResourceQuota
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: team-beta-quota
  namespace: ns-b
spec:
  hard:
    limits.cpu: "8"
    limits.memory: 16Gi
    requests.cpu: "8"
    requests.memory: 16Gi

---

[TestGenerateResourceQuotaManifests_Defaults - 1]
apiVersion: v1
kind: ResourceQuota
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: team-alpha-quota
  namespace: team-alpha
spec:
  hard:
    limits.cpu: "4"
    limits.memory: 8Gi
    requests.cpu: "4"
    requests.memory: 8Gi

---
